[package]
name = "hooray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.0"
rand = "0.8.5"

[dev-dependencies]
indicatif = "0.17.3"
png = "0.17.7"
rand_chacha = "0.3.1"
rayon = "1.6.1"
